Bug#36854 - Backup: error message truncated.

* Changes the text of the very long error message for ER_BACKUP_TS_CHANGE. 
* Removes si_object#describe_tablespace, which is no longer in use